[package]
name = "playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }
talk = { git = "https://github.com/Distributed-EPFL/talk", features=[ "test_utilities" ] }
bincode = "1.3.3"
serde = "1.0.130"
udt = "0.2.0"